--- a/MMM-Strava.html.chart.njk
+++ b/MMM-Strava.html.chart.njk
@@ -29,7 +29,7 @@
                 {% endfor %}
                 </g>
             </svg>
-            <div class="strava-icon icon-lg icon-{{ activity | lower }}" title="{{ activity | lower }}"></div>
+            <div class="strava-icon icon-lg icon-{{ activity | lower }}" title="{{ activity | upper | translate }}"></div>
         </div>
 {% endfor %}
     </div>
