--- a/MMM-Strava.css
+++ b/MMM-Strava.css
@@ -1,3 +1,6 @@
+/***************************
+ * MMM-Strava Module
+ ***************************/
 .MMM-Strava .symbol {
   padding-left: 10px;
   padding-right: 0;
@@ -112,4 +115,72 @@
 
 .MMM-Strava svg .bar {
   shape-rendering: crispEdges;
+}
+
+/***************************
+ * MMM-Strava-Authorisation
+ ***************************/
+div.module.MMM-Strava-Authorisation {
+  display: none;
+  text-align: center;
+}
+
+.MMM-Strava-Authorisation a:link,
+.MMM-Strava-Authorisation a:visited,
+.MMM-Strava-Authorisation a:active {
+  color: #666;
+}
+
+.MMM-Strava-Authorisation a:hover {
+  color: #fff;
+  opacity: 0.8;
+}
+
+.MMM-Strava-Authorisation fieldset {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  min-width: 0;
+}
+
+.MMM-Strava-Authorisation fieldset legend,
+.MMM-Strava-Authorisation input[type="radio"] + label {
+  padding: 5px;
+}
+
+.MMM-Strava-Authorisation input[type="radio"] + label {
+  opacity: 0.6;
+}
+
+.MMM-Strava-Authorisation input[type="radio"] + label:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.MMM-Strava-Authorisation input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.MMM-Strava-Authorisation input[type="radio"]:checked + label {
+  background-color: #666;
+  color: #fff;
+  opacity: 0.6;
+}
+
+.MMM-Strava-Authorisation button {
+  background-color: #fc4c02;
+  border-color: #fc4c02;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 17px;
+  font-family: Roboto, sans-serif;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.MMM-Strava-Authorisation button:hover {
+  opacity: 0.6;
 }
