--- a/templates/MMM-Strava.table.njk
+++ b/templates/MMM-Strava.table.njk
@@ -28,7 +28,7 @@
                 <td class="light symbol align-right stat"><span class="fa fa-clock-o" title="Elapsed time"></span></td>
                 {% endif %}
                 {% if ('achievements' in config.stats) and (config.period === "recent") %}
-                <td class="light symbol align-right stat"><span class="fa fa-trophy" title="Acheivements"></span></td>
+                <td class="light symbol align-right stat"><span class="fa fa-trophy" title="Achievements"></span></td>
                 {% endif %}
             </tr>
         </thead>
