--- a/templates/MMM-Strava.table.njk
+++ b/templates/MMM-Strava.table.njk
@@ -74,9 +74,9 @@
     </table>
     <div class="small progressbar">
 		<svg  class="progressSVG" xmlns="http://www.w3.org/2000/svg" height="300" width="300" viewBox="0 0 300 300" data-value="50">
-			<path class="bg" stroke="#ccc" d="M90 249.5 a 100 100 0 1 1 117.93 0"  fill="none"/>
-      <path class="measure" stroke="#ddd" d="M90 249.5 a 100 100 0 1 1 117.93 0" fill="none" stroke-dasharray="510" stroke-dashoffset="{{measureOffset}}"/>
+			<path class="bg" stroke="#666" d="M90 249.5 a 100 100 0 1 1 117.93 0"  fill="none"/>
       <path class="meter" stroke="#09c" d="M90 249.5 a 100 100 0 1 1 117.93 0" fill="none" stroke-dasharray="510" stroke-dashoffset="{{barOffset}}"/>
-		</svg>
+      <path class="threshold" stroke="#fff" d="M90 249.5 a 100 100 0 1 1 117.93 0"  fill="none" stroke-dasharray="3 600" stroke-dashoffset="{{barThreshold}}"/>
+    </svg>
     </div>
 {% endif %}
