--- a/templates/MMM-Strava.chart.njk
+++ b/templates/MMM-Strava.chart.njk
@@ -24,12 +24,12 @@
                     </g>
                     {% endfor %}
                     <text y="-30" fill="#ffffff">
-                        <tspan x="0" text-anchor="middle">{{ total_distance | formatDistance(1, true) }}</tspan>
+                        <tspan x="0" text-anchor="middle">{{ total_distance | formatDistance(config.digits, true) }}</tspan>
                     </text>
                     <text y="35" fill="#cccccc">
                         <tspan x="0" text-anchor="middle">{{ data[activity].total_moving_time | formatTime }}</tspan>
                         {%  if activity !== "swim" %}
-                        <tspan x="0" dy="25" text-anchor="middle">{{ data[activity].total_elevation_gain | formatElevation(1, true) }}</tspan>
+                        <tspan x="0" dy="25" text-anchor="middle">{{ data[activity].total_elevation_gain | formatElevation(config.digits, true) }}</tspan>
                         {% endif %}
                     </text>
                     <g id="activity-icon" fill="white" width="28" height="28" opacity="0.80" transform="translate(-14, -14)">
@@ -48,11 +48,11 @@
         {% else %}
 
             <div class="primary-stats">
-                <span class="actual small bright">{{ total_distance | formatDistance(1, true) }}</span>
+                <span class="actual small bright">{{ total_distance | formatDistance(config.digits, true) }}</span>
                 <ul class="inline-stats">
                     <li class="xsmall light">{{ data[activity].total_moving_time | formatTime }}</li>
                     {%  if activity !== 'swim' %}
-                    <li class="xsmall light">{{ data[activity].total_elevation_gain | formatElevation(1, true) }}</li>
+                    <li class="xsmall light">{{ data[activity].total_elevation_gain | formatElevation(config.digits, true) }}</li>
                     {% endif %}
                 </ul>
             </div>
