--- a/templates/MMM-Strava.chart.njk
+++ b/templates/MMM-Strava.chart.njk
@@ -42,9 +42,20 @@
             <div class="primary-stats">
                 <span class="actual small bright">{{ total_distance | formatDistance(config.digits, true) }}</span>
                 <ul class="inline-stats">
+                    {% if 'moving_time' in config.stats %}
                     <li class="xsmall light">{{ data[activity].total_moving_time | formatTime }}</li>
-                    {%  if activity !== 'swim' %}
+                    {% endif %}
+                    {% if 'elapsed_time' in config.stats %}
+                    <li class="xsmall light">{{ data[activity].total_elapsed_time | formatTime }}</li>
+                    {% endif %}
+                    {% if ('elevation' in config.stats) and (activity != "swim") %}
                     <li class="xsmall light">{{ data[activity].total_elevation_gain | formatElevation(config.digits, true) }}</li>
+                    {% endif %}
+                    {% if 'count' in config.stats %}
+                    <li class="xsmall light"><span class="fa fa-fw fa-hashtag dimmed" title="Activity count"></span>{{ data[activity].intervals | length}}</li>
+                    {% endif %}
+                    {% if ('achievements' in config.stats) %}
+                    <li class="xsmall light"><span class="fa fa-fw fa-trophy dimmed" title="Achievements"></span>{{ data[activity].total_achievement_count}}</li>
                     {% endif %}
                 </ul>
             </div>
