--- a/templates/MMM-Strava.table.njk
+++ b/templates/MMM-Strava.table.njk
@@ -3,7 +3,7 @@
         {{ 'LOADING' | translate | safe }}
     </div>
 {% elif error %}
-    <div class="small dimmed light">
+    <div class="small light">
         {{ error | safe }}
     </div>
 {% else %}
